--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-switch": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -19,6 +21,7 @@
     "lucide-react": "^0.279.0",
     "next": "latest",
     "react": "latest",
+    "react-color": "^2.19.3",
     "react-color-palette": "^7.1.0",
     "react-colorful": "^5.6.1",
     "react-dom": "latest",
